updated mailtemplates (some addl config), posts model extended/ addl fields pertaining post in the ui

--- a/app/components/gh-nav-menu/main.hbs
+++ b/app/components/gh-nav-menu/main.hbs
@@ -73,9 +73,9 @@
             {{#if (gh-user-can-admin this.session.user)}}
                 <li class="relative">
                     {{#if (eq this.router.currentRouteName "members.index")}}
-                        <LinkTo @route="members" @current-when="members member" @query={{reset-query-params "members.index"}} data-test-nav="members">{{svg-jar "members"}}Members</LinkTo>
+                        <LinkTo @route="members" @current-when="members member" @query={{reset-query-params "members.index"}} data-test-nav="members">{{svg-jar "members"}}Subscribers</LinkTo>
                     {{else}}
-                        <LinkTo @route="members" @current-when="members member" data-test-nav="members">{{svg-jar "members"}}Members</LinkTo>
+                        <LinkTo @route="members" @current-when="members member" data-test-nav="members">{{svg-jar "members"}}Subscribers</LinkTo>
                     {{/if}}
                     {{#unless this.memberCountLoading}}
                     <span class="gh-nav-member-count">{{format-number this.memberCount}}</span>
@@ -85,7 +85,7 @@
                     <LinkTo @route="integrations" @alt="Integrations" @title="Integrations" data-test-nav="dashboard">{{svg-jar "module"}}Integrations</LinkTo>
                 </li>
             {{/if}}
-            <li><LinkTo @route="staff" data-test-nav="staff">{{svg-jar "staff"}}Staff</LinkTo></li>
+            <li><LinkTo @route="staff" data-test-nav="staff">{{svg-jar "staff"}}Creators</LinkTo></li>
         </ul>
 
         {{#if this.session.user.isOwner}}
