--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -145,8 +145,8 @@
                         <LinkTo @route="members">
                             <span class="icon">{{svg-jar "members"}}</span>
                             <div>
-                                <h4>Create your first member</h4>
-                                <p>Add yourself or import members from CSV</p>
+                                <h4>Add your first subscribers</h4>
+                                <p>Add yourself or import subscribers from CSV</p>
                             </div>
                         </LinkTo>
                     {{/if}}
@@ -154,7 +154,7 @@
                         <span class="icon green">{{svg-jar "posts"}}</span>
                         <div>
                             <h4>Publish a post</h4>
-                            <p>Get familiar with the Ghost editor and start creating</p>
+                            <p>Get familiar with the editor and start creating</p>
                         </div>
                     </LinkTo>
                 </div>
@@ -165,7 +165,7 @@
                 <div class="gh-dashboard-box">
                     <div class="content">
                         <h2>Customise your site design</h2>
-                        <p>Stand out from the crowd. Ghost lets you customize everything so you can create a publication that doesn’t just look the same as what everyone else has.</p>
+                        <p>Stand out from the crowd. Customize everything so you can create a publication that doesn’t just look the same as what everyone else has.</p>
                     </div>
                     <div class="footer">
                         <LinkTo class="gh-btn gh-btn-outline mt2 mr2" @route="settings"><span>Brand</span></LinkTo>
@@ -175,7 +175,7 @@
                 </div>
                 <div class="gh-dashboard-box">
                     <div class="content">
-                        <h2>Looking for help with Ghost features?</h2>
+                        <h2>Looking for help with features?</h2>
                         <p>Our product knowledgebase is packed full of guides, tutorials, answers to frequently asked questions, tips for dealing with common errors, and much more. </p>
                     </div>
                     <div class="footer">
