--- a/app/templates/setup/three.hbs
+++ b/app/templates/setup/three.hbs
@@ -35,6 +35,6 @@
     </GhTaskButton>
 </form>
 
-<button class="gh-flow-skip" {{action "skipInvite"}}>
-    I'll do this later, take me to my site!
+<button class="gh-btn gh-btn-default gh-btn-lg gh-btn-block gh-btn-minor" {{action "skipInvite"}}>
+    <span> I'll do this later, take me to my site! </span>
 </button>
