--- a/app/components/gh-members-no-members.hbs
+++ b/app/components/gh-members-no-members.hbs
@@ -1,16 +1,16 @@
 <div class="flex flex-column items-stretch">
     {{!-- <p class="">Get started with one of the following options</p> --}}
     <button class="gh-btn gh-btn-green" {{on "click" this.addYourself}}>
-        <span>Add yourself as a member to test</span>
+        <span>Add yourself as a subscriber to test</span>
     </button>
 
     <div class="flex flex-column items-stretch mt8 pt8 pb10">
         <LinkTo @route="member.new" class="gh-btn gh-btn-outline mb3">
-            <span>Manually add a member</span>
+            <span>Manually add a subscriber</span>
         </LinkTo>
 
         <LinkTo @route="members.import" class="gh-btn gh-btn-outline">
-            <span>Import members from CSV</span>
+            <span>Import subscribers from CSV</span>
         </LinkTo>
     </div>
 </div>
