--- a/app/styles/components/loading-indicator.css
+++ b/app/styles/components/loading-indicator.css
@@ -24,7 +24,7 @@
     margin: -2px 0;
     width: 50px;
     height: 50px;
-    border: rgba(0,0,0,0.1) solid 1px;
+    border: rgba(0,0,0,0.35) solid 1px;
     border-radius: 100px;
     animation: spin 1s linear infinite;
 }
@@ -37,6 +37,17 @@
     height: 7px;
     background: #4C5156;
     border-radius: 100px;
+    z-index: 10;
+}
+
+.gh-loading-spinner:after {
+    content: "";
+    display: block;
+    width: 0;
+    border: dotted 12px;
+    height: 0;
+    background: green;
+    border-radius: 100%;
     z-index: 10;
 }
 
