--- a/app/templates/setup/one.hbs
+++ b/app/templates/setup/one.hbs
@@ -1,12 +1,12 @@
 <header>
-    <h1>Welcome to <strong>Ghost</strong>!</h1>
-    <p>All over the world, people have started <em>2,000,000+</em> incredible sites with Ghost. Today, we’re starting yours.</p>
+    <h1>Welcome To Your Blog Setup</h1>
+    <p>Click on the button below & fill in the details.</p>
 </header>
 
 <figure class="gh-flow-screenshot">
-    <img src="assets/img/install-welcome.png" alt="Ghost screenshot" />
+    <img src="assets/img/install-welcome.png" alt="Blog screenshot" />
 </figure>
 
 <LinkTo @route="setup.two" @classNames="gh-btn gh-btn-green gh-btn-lg gh-btn-icon gh-btn-icon-right">
-    <span>Create your account &rarr;</span>
+    <span>Setup Blog &rarr;</span>
 </LinkTo>
