dashboard & setup minor rects

--- a/app/templates/setup/one.hbs
+++ b/app/templates/setup/one.hbs
@@ -1,12 +1,12 @@
 <header>
-    <h1>Welcome To Your Blog Setup</h1>
+    <h1>Welcome To Your Blog/Publication Setup</h1>
     <p>Click on the button below & fill in the details.</p>
 </header>
 
 <figure class="gh-flow-screenshot">
-    <img src="assets/img/install-welcome.png" alt="Blog screenshot" />
+    <img src="assets/img/install-welcome.png" alt="Publication screenshot" />
 </figure>
 
 <LinkTo @route="setup.two" @classNames="gh-btn gh-btn-green gh-btn-lg gh-btn-icon gh-btn-icon-right">
-    <span>Setup Blog &rarr;</span>
+    <span>Start Setup &rarr;</span>
 </LinkTo>
